--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
       <meta name="viewport" content="width=device-width, user-scalable=no"/>
       <title>Hello world LivePerson</title>
    </head>
+
    <body>
       <!--HTML BODY CONTENT-->
-      Hello world LivePerson
+      Hello world LivePerson!
    </body>
 </html>
