--- a/index.html
+++ b/index.html
@@ -1,104 +1,36 @@
-console.log("index.js");
-
-errorMessage = document.getElementById("errorMessage");
-
-chatText = "chatTranscript.lines";
-
-console.log(chatText);
-
- 
 
 
- 
 
-var updateCallback = function(data){
-
-    var value = data.newValue;
-
-   
-
-    console.log("value : "+value);
-
-    var line = value[value.length -1];
-
-    console.log("line : "+line);
-
-    var movieName = line.text;
-
-    console.log("after movieName");
-
-    console.log("moviename : "+movieName);
-
-    if (line.source.toLowerCase()==="visitor"){
-
-        var url = "https://www.omdbapi.com?apikey=9c244dec&t="+movieName;
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>JSON Test</title>
+</head>
+<body>
+    <div id="myData"></div>
+    <script>
+     var url ="http://www.omdbapi.com/?t=terminator&apikey=c2eec5ec";
         fetch(url)
-
-                .then(function(response){
-
-                    return response.json();
-
-                }
-
-                ).then(function(res){
-
-                    document.getElementById("Title").innerHTML = res.Title;
-
-                    document.getElementById("Year").innerHTML = res.Year;
-
-                    document.getElementById("Rated").innerHTML = res.Rated;
-
-                    document.getElementById("Actors").innerHTML = res.Actors;
-
-                    document.getElementById("Genre").innerHTML = res.Genre;
-
-                    document.getElementById("Plot").innerHTML = res.Plot;
-
- 
-
-
- 
-
-
- 
-
-
- 
-
-                }).catch(function(error){
-
-                    console.log("I am inside catch");
-
-                    console.log("Error Message : "+error);
-
-                })
-
-    }
-
-};
-
- 
-
-
- 
-
-
- 
-
-
- 
-
-var notifyWhenDone = function(error) {
-
-    if (err){
-
-        console.log("I am inside notifyWhenDone function : "+err);
-
-    }
-
-    var chatText = "chatTranscript.lines";
-
-    errorMessage.innerHTML = "Unable to find the movie";
-
-};
+            .then(function (response) {
+                return response.json();
+            })
+            .then(function (data) {
+                appendData(data);
+            })
+            .catch(function (err) {
+                console.log('error: ' + err);
+            });
+        function appendData(data) {
+            var mainContainer = document.getElementById("myData");
+            for (var i = 0; i < data.length; i++) {
+                var div = document.createElement("div");
+                div.innerHTML = 'Name: ' + data[i].firstName + ' ' + data[i].lastName;
+                mainContainer.appendChild(div);
+            }
+        }
+    </script>
+</body>
+</html>
