--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@ console.log("RESULT-------------------------")
 console.log(resut)
 //if (resut.Response === "True") 
 {
+    </script>
+        <div id="test">Title <script>resut.Title </script></div>
+        <script>
 appDiv.innerHTML =
 "<div>Title: " +
 resut.Title +
