--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     LP CERTIFICATION
-    <div id="ver">5</div>
+    <div id="ver">6</div>
     <script>
         const appDiv = document.getElementById("ver");
 pathToData = "chatTranscript.lines";
@@ -29,7 +29,12 @@ const messageObj = value[index];
 {
 //fetch("https://www.omdbapi.com?t=" + messageObj.text + "&apikey=c2eec5ec")
  fetch(url) 
-.then(response => response.json())
+.then(response => {
+    if (!response.ok) { 
+    appDiv.innerHTML ="error";
+    throw response }
+    return response.json()  //we only get here if there is no error
+  })
 .then(json => {
      this.users = json;
 console.log("RESULT-------------------------")
