--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     LP CERTIFICATION
-    <div id="ver">7</div>
+    <div id="ver">8</div>
     <script>
         const appDiv = document.getElementById("ver");
 pathToData = "chatTranscript.lines";
@@ -35,13 +35,13 @@ const messageObj = value[index];
     return response.json()  //we only get here if there is no error
   })
 .then(json => {
-     document.querySelector("#ver").innerText = data.sentence
+     document.querySelector("#ver").innerText = json.sentence
 console.log("RESULT-------------------------")
 console.log(json)
 //if (json.Response === "True") 
 {
     </script>
-        <div id="test">Title <script>this.users </script></div>
+        <div id="test">Title <script>json.sentence[0] json.sentence.Title </script></div>
         <script>
 appDiv.innerHTML =
 "<div>Title: " +
