--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     LP CERTIFICATION
-    <div id="ver">8</div>
+    <div id="ver">9</div>
     <script>
         const appDiv = document.getElementById("ver");
 pathToData = "chatTranscript.lines";
@@ -38,10 +38,10 @@ const messageObj = value[index];
      document.querySelector("#ver").innerText = json.sentence
 console.log("RESULT-------------------------")
 console.log(json)
-//if (json.Response === "True") 
+if (json.Response === "True") 
 {
     </script>
-        <div id="test">Title <script>json.sentence[0] json.sentence.Title </script></div>
+        <div id="test">Title <script> </script></div>
         <script>
 appDiv.innerHTML =
 "<div>Title: " +
