--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 </head>
 <body>
     LP CERTIFICATION
-    <div id="ver">140</div>
+    <div id="ver">rel 1140</div>
+    <div id="appDiv"></div>
     <script>
         const appDiv = document.getElementById("appDiv");
         appDiv.innerHTML = "Response init";
