--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body>
     LP CERTIFICATION
-    <div id="ver">rel 1140</div>
+    <div id="ver">rel 11340</div>
     <div id="appDiv"></div>
     <script>
         const appDiv = document.getElementById("appDiv");
         appDiv.innerHTML = "Response init";
+        appDiv.innerHTML = appDiv+" -system check";
 pathToData = "chatTranscript.lines";
 const updateCallback = function(data) {
 console.log("***updateCallback****");
