--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         appDiv.innerHTML += " -system check";
 pathToData = "chatTranscript.lines";
         appDiv.innerHTML += " -set pathToData";
-const updateCallback = function(data) {
+//const updateCallback = function(data) {
     appDiv.innerHTML += " -update callback";
 console.log("***updateCallback****");
 // Do something with the returning data
