--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ console.log(err);
 // called each time the value is updated.
 // If there's an existing value when bind is called - this callback
 // will be called with the existing value
-};
+//callback closing bracket };
 const notifyWhenDone = function(err) {
 if (err) {
 // Do something with the error
