--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@ console.log("***updateCallback****");
 // Do something with the returning data
 console.log("JSON DATA----------------------");
 // const path = data.key;
-const value = data.newValue;
-const index = value.length - 1;
-const messageObj = value[index];
+//const value = data.newValue;
+//const index = value.length - 1;
+//const messageObj = value[index];
     appDiv.innerHTML += " -setting api call";
     var url ="http://www.omdbapi.com/?t=terminator&apikey=c2eec5ec";
 //if (messageObj.source === "visitor") 
