--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ console.log("JSON DATA----------------------");
 //const index = value.length - 1;
 //const messageObj = value[index];
     appDiv.innerHTML += " -setting api call";
-    var url ="http://www.omdbapi.com/?t=terminator&apikey=c2eec5ec";
+    var url ="https://www.omdbapi.com/?t=terminator&apikey=c2eec5ec";
 //if (messageObj.source === "visitor") 
     if(true)
 {
